# AI-Automation

./: README.md
01-cadrage/: contexte.md
02-marketing/: acquisition-automatisee.md  plan-marketing.md
04-agents/: flotte-agents.md
05-processus/: gate-production.md
06-frictions/: REGISTRE-BUGS.md
actu-cybersecurite/: .env.example  .gitignore  (+1 more)
voxlocal/: .env.example  .gitignore  00-CONTEXTE-PRINCIPAL.md  AVANCEMENT.md  GUIDE-COMPTES.md  PLAN-PHASES.md  PREREQUIS.md  pyproject.toml
voxlocal/01-cadrage/: icp-qualification.md
voxlocal/02-marketing/: contexte.md  modele-financier.md  script-mirror-demo.md
voxlocal/03-architecture/: connectivite-et-securite.md  contexte.md  stack-et-mcp.md  topologie.md
voxlocal/04-agents/: contexte.md
voxlocal/05-processus/: boucle-coherence.md  contexte.md  gating-financier.md  ops-maintenance-auto.md
voxlocal/06-frictions/: JOURNAL-FRICTIONS.md
voxlocal/app/: README.md  main.py  onboarding_store.py
voxlocal/demo/: README.md  simulate_call.py
voxlocal/legal/: CGV.md  DPA.md  confidentialite.md
voxlocal/mcp/billing/: server.py
voxlocal/mcp/calendar/: server.py
voxlocal/mcp/common/: icp.py  models.py
voxlocal/mcp/compliance/: server.py
voxlocal/mcp/crm/: server.py
voxlocal/mcp/memory/: server.py
voxlocal/mcp/model_router/: server.py
voxlocal/mcp/prospecting/: server.py
voxlocal/mcp/telephony/: server.py
voxlocal/mcp/transcript_qa/: server.py
voxlocal/mcp/voxagent_config/: server.py
voxlocal/templates/cold-email/: sequence.md
voxlocal/tests/: run_golden.py
voxlocal/tests/golden/: btp.json
(+58 files in other folders)
